Fixed bug#9901 - CustomerFatalError expand/collapse error details is broken.

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Default.css
@@ -241,6 +241,10 @@ div.Clear {
     height: 180px;
 }
 
+.WidgetSimple .ErrorMessage .WidgetAction {
+    display: none;
+}
+
 /**
  * @subsection  Datepicker
  */
